--- a/contacts-ddd-portal/ClientApp/src/index.html
+++ b/contacts-ddd-portal/ClientApp/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="bg-light" style="padding-top: 56px; padding-bottom: 60px">
+<body class="bg-light" style="padding-top: 56px">
   <app-root></app-root>
 </body>
 </html>
